# openmc_fusion_benchmarks

./: .gitignore  DELETE.ipynb  LICENSE  MANIFEST.in  README.md  TODO.md  benchmark_list.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
FNS_dogleg_duct_streami/: readme.md
IRDFF2_xs/: dos-irdff2-2825_modified.acef  dos-irdff2-7925_modified.acef
benchmark_tools/: MANIFEST.in  setup.py
benchmark_tools/benchmark_tools/: __init__.py  fng_from_routine.csv  xml_to_py.py
benchmark_tools/benchmark_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: _config.yml  _toc.yml  dev_installation.md  fng_readme.md  fng_str_benchmark.md  fng_w_benchmark.md  fns_clean_w_benchmark.md  fns_duct_benchmark.md  fns_readme.md  installation.md  intro.md  oktavian_benchmark.md  oktavian_readme.md  user_installation.md
fng_dose/: R2S.md  activate.py  activation_cells.json  bbtest.xml  bounding_boxes.json  bounding_boxes2.json  ccfe709.txt  cell_volumes.json  cell_volumes2.json  chain_endfb80_reduced.xml  chain_reduced.xml  data_config.py  fng_copper.sdef  fng_neutron.xml  fng_neutron_endf71.xml  fng_photon_campaign2.xml  generate_settings.py  geometry.xml  get_bounding_box.py  materials.xml  mcnp_g.inp  mcnp_n.inp  mcnp_n_edit.inp  mcnp_n_endf71x.inp  model.xml  output.txt  plot_source_position.py  r2s.py  r2s_mesh.py  run_photon_dose.py  settings.xml  test_vol_model.xml  valid_cells.json  volumes.py  yields.txt
fng_dose/analysis/: experiment.txt  nickel_foil_rr.py  plot_chains.py  plot_results.py
fng_dose/bb_mwe_test/: bb_mwe.py  (+2 more)
fng_str/: FNG-ITER_neutron_streaming_offaxis.ipynb  fng-str_model.py  fng-str_model_notebook.ipynb  fng-str_postprocessing.ipynb  fng_source.py  fng_source.xlsx  fng_str_model.py  from_irdff.py  geometry.xml  heating_mcnp_eff3.csv  heating_mcnp_fendl1.csv  heating_mcnp_fendl2.csv  heating_measured.csv  helpers.py  postprocessing.ipynb  postprocessing_v2.ipynb  postprocessing_v3.ipynb  sinbad_results.py  tab10_reaction_rates.xlsx  tab11_reaction_rates.xlsx  tab5_reaction_rates.xlsx  tab6_reaction_rates.xlsx  tab7_reaction_rates.xlsx  tab9_reaction_rates.xlsx
fns_be/: fns_be.py
fns_duct/: fng_source.py  fng_source_froutine.py  fns-duct_foils.py  fns-duct_postprocessing.ipynb  fns-str-s_mod.xls  fns_duct-rr.xlsx  fns_duct_model.py  fns_duct_no_ww.py  fns_duct_ww.py  fns_duct_ww_v6.ipynb  from_irdff.py  particle_4_31407447.h5  particle_8_219840527.h5  statepoint.100.h5  statepoint_au1b_fendl.10.h5  statepoint_in1b_fendl.10.h5  statepoint_nb1b_fendl.10.h5
iter_port_plug/: ITER_port_plug_benchmark.stp  iter_port_plug.py  iter_port_plug_cadis.wwinp  iter_port_plug_fwcadis.mcnp.i  iter_port_plug_fwcadis.wwinp
notebooks/: Run_and_store.ipynb  plotting_results.ipynb  push_openmc_to_database.ipynb  read_database_h5files.ipynb  read_database_hdf.ipynb  read_openmc_statepoints.ipynb
scripts/: fng_source_froutine.py
src/: __init__.py  from_irdff.py
test/: benchmark_test.py  read_results_test.py  test_version.py  visualize_test.py
(+336 files in other folders)
