[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmc_fusion_benchmarks"
version = "0.0.1"
authors = [
  { name="Stefano Segantin", email="segantin@psfc.mit.edu" }
]

description = "V&V of openmc for nuclear fusion applications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
fng_source = ["openmc_fusion_benchmarks/neutron_sources/fng_source/*.csv"]

dependencies = [
    "openmc",
    "numpy",
    "pandas",
    "tables"
]

[project.optional-dependencies]
tests = ["pytest>=5.4.3", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/eepeterson/openmc_fusion_benchmarks"
"Bug Tracker" = "https://github.com/eepeterson/openmc_fusion_benchmarks/issues"