[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmc_fusion_benchmarks"
authors = [
  { name="Stefano Segantin", email="segantin@psfc.mit.edu" }
]
dynamic = ["version"]
description = "V&V of openmc for nuclear fusion applications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "tables",
    "gdown",
]

[tool.setuptools.package-data]
fng_source = ["openmc_fusion_benchmarks/neutron_sources/fng_source/*.csv"]


[project.optional-dependencies]
tests = ["pytest>=5.4.3", "pytest-cov", "coveralls"]

[project.urls]
"Homepage" = "https://github.com/eepeterson/openmc_fusion_benchmarks"
"Bug Tracker" = "https://github.com/eepeterson/openmc_fusion_benchmarks/issues"

[tool.setuptools.dynamic]
version = {attr = "openmc_fusion_benchmarks.__version__"} 